# spatialite-rs

./: Cargo.toml
src/: lib.rs
